- Handle EVA kerbal disappearing during KerbalSafety configuring.
- Add null check to IsKerbalEVA extension.
IMPROVEMENTS
- AI/WM:
	- Use CM threshold for determining missile closest approach instead of a fixed 2s value.
	- Add alternate max for strafingSpeed.
	- Switch turrets to use the Firing Angle instead of needing to be directly on-target.
- Parser:
	- Use a more natural sorting order for rounds in the parser so the score-by-round is consistent.
	- Use more precision in the csv file for the cumulative scores.
- Tournaments:
	- Add option to auto-generate a tournament if auto-resuming and there isn't an incomplete tournament to run.
- Evolution:
	- Maintain evolution state and properly add in support for auto-resuming evolutions.
	- Add current heat to the evolution window.
	- Include rockets fired and rocket strikes in the evolution scoring metric.
	- Update the set of parameters the evolution engine can modify for the latest pilot AI and remove invalid ones.
	- Limit evolved control surface authority to 150% (i.e., in-game limits).
	- Add auto-quit memory threshold between evolution groups.
- Spawning:
	- Add some checks for missing vessels during post-spawning.

v1.4.13.2
FIXES
- Fix comboboxes triggering force close on themselves when they should be opening.
- Use the correct spawn distance based on the spawn distance toggle for tournaments.
- Don't extend from ground targets when using a weapon that doesn't target ground targets, immediately look for another target instead.
IMPROVEMENTS
- Set the default evasionTimeThreshold to 0.1s.
- Make all custom paths relative to the KSP install directory to remove dependence on running location (PRE needs fixing for this to be usable though).
- Count rockets fired separately from shots fired and calculate rocket accuracy from the number of rocket strikes.