@@ -494,6 +494,7 @@ Localization
         #LOC_BDArmory_ExtendTargetDist = Extend Target Distance
         #LOC_BDArmory_ExtendToggle = Extend Toggle
         #LOC_BDArmory_MinEvasionTime = Min Evasion Time
+        #LOC_BDArmory_EvasionNonlinearity = Evasion/Extension Nonlinearity
         #LOC_BDArmory_EvasionThreshold = Evasion Distance Threshold
         #LOC_BDArmory_EvasionTimeThreshold = Evasion Time Threshold	
         #LOC_BDArmory_EvasionIgnoreMyTargetTargetingMe = Don't Evade My Target
